--- a/configure.ac
+++ b/configure.ac
@@ -395,6 +395,7 @@ AC_CONFIG_FILES([Makefile
 		 contribs/phpext/slurm_php/config.m4
 		 contribs/sjobexit/Makefile
 		 contribs/slurmdb-direct/Makefile
+		 contribs/pmi2/Makefile
 		 src/Makefile
 		 src/api/Makefile
 		 src/common/Makefile
