--- a/src/slurmd/common/Makefile.am
+++ b/src/slurmd/common/Makefile.am
@@ -7,7 +7,8 @@ INCLUDES = -I$(top_srcdir)
 
 # making a .la
 
-noinst_LTLIBRARIES = libslurmd_common.la
+noinst_LTLIBRARIES = libslurmd_common.la libslurmd_reverse_tree_math.la
+
 libslurmd_common_la_SOURCES =    \
 	proctrack.c proctrack.h \
 	setproctitle.c setproctitle.h \
@@ -16,3 +17,7 @@ libslurmd_common_la_SOURCES =    \
 	task_plugin.c task_plugin.h \
 	set_oomadj.c set_oomadj.h \
 	reverse_tree.h
+
+libslurmd_reverse_tree_math_la_SOURCES = \
+	reverse_tree_math.c \
+	reverse_tree_math.h
