Update pmi2 plugin with latest changes
Compared against the latest files under origin/slurm-15.08.  Pulled in
changes to make more consitent.  Some of these where purely consmetic
(e.g., white spaces), while others were valid bug fixes that were
recently committed.

Also, re-enabled the building of the PAM plugin

--- a/contribs/pmi2/Makefile.am
+++ b/contribs/pmi2/Makefile.am
@@ -4,6 +4,7 @@
 AUTOMAKE_OPTIONS = foreign
 
 pkginclude_HEADERS = slurm/pmi2.h
+noinst_HEADERS = pmi2_util.h
 
 if WITH_GNU_LD
 PMI2_VERSION_SCRIPT = \
